[project]
name = "servicenow-agent"
version = "0.1.0"
description = "ServiceNow agent for Google AgentSpace using ADK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.9.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.106.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
